--- a/Excel/inmobiliaria-app/backend/package.json
+++ b/Excel/inmobiliaria-app/backend/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
@@ -25,6 +26,7 @@
     "nodemailer": "^8.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.17.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
