--- a/Excel/inmobiliaria-app/frontend/package.json
+++ b/Excel/inmobiliaria-app/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
+    "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
